--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
 	:root {
 		--background: 0 0% 100%;
-		--foreground: 0 0% 3.9%;
+		--foreground: 0 0% 7.06%;
 
 		--card: 0 0% 100%;
 		--card-foreground: 0 0% 3.9%;
@@ -16,13 +16,13 @@
 		--primary: 0 0% 9%;
 		--primary-foreground: 0 0% 98%;
 
-		--secondary: 0 0% 96.1%;
-		--secondary-foreground: 0 0% 9%;
+		--secondary: 0, 0%, 95.29%;
+		--secondary-foreground: 0 0% 11%;
 
 		--muted: 0 0% 96.1%;
 		--muted-foreground: 0 0% 45.1%;
 
-		--accent: 0 0% 96.1%;
+		--accent: 0, 0%, 90.98%;
 		--accent-foreground: 0 0% 9%;
 
 		--destructive: 0 84.2% 60.2%;
@@ -37,7 +37,7 @@
 
 	.dark {
 		--background: 0, 0%, 7.06%;
-		--foreground: 0 0% 98%;
+		--foreground: 0 0% 100%;
 
 		--card: 0 0% 3.9%;
 		--card-foreground: 0 0% 98%;
@@ -48,13 +48,13 @@
 		--primary: 0 0% 98%;
 		--primary-foreground: 0 0% 9%;
 
-		--secondary: 0 0% 14.9%;
+		--secondary: 0, 0%, 10.2%;
 		--secondary-foreground: 0 0% 98%;
 
 		--muted: 0 0% 14.9%;
 		--muted-foreground: 0 0% 63.9%;
 
-		--accent: 0 0% 14.9%;
+		--accent: 0, 0%, 14.9%;
 		--accent-foreground: 0 0% 98%;
 
 		--destructive: 0 62.8% 30.6%;
@@ -73,6 +73,85 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+    .h-screen{
+        height: 100lvh;
+    }
+    .bg-gradient{
+        background: rgb(228,43,43);
+        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
+    }
+
+    .bg-hero-gradient{
+        background: rgb(228,43,43);
+        background: linear-gradient(27deg, rgba(228,43,43,0.50) 0%, rgba(244,126,82,0) 83%);
+    }
+
+    .hero-input[type="text"]:focus + .hero-label,
+    .hero-input[type="text"]:not(:placeholder-shown) + .hero-label  {
+        transform: translateY(-1.5rem); /* Adjust the value as needed */
+        font-size: 0.75rem; /* Adjust the size as needed */
+    }
+    .hero-label {
+        transition: transform 0.2s ease, font-size 0.2s ease;
+        pointer-events: none; /* So you can click through the label to focus the input */
+        transform-origin: left bottom;
+    }
+
+    .text-gradient{
+        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .nav-item {
+        position: relative; 
+        display: inline-block;
+        @apply text-[18px] font-medium;
+        color: var(--text-foreground-color);
+        transition: color 0.3s;
+      }
+
+      .nav-item-mobile {
+        position: relative; 
+        display: inline-block;
+        @apply text-[18px] font-medium;
+        color: var(--text-foreground-color);
+      }
+      
+      .nav-item::after {
+        content: attr(data-text); /* Use the text content of the element */
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        -webkit-text-fill-color: transparent;
+        opacity: 0; /* Hide it initially */
+        transition: opacity 0.3s; /* Smooth transition for the opacity */
+        pointer-events: none; /* Allow clicks to pass through */
+      }
+      
+      .nav-item:hover::after {
+        opacity: 1; /* Show the gradient on hover */
+      }
+
+      .nav-item:hover {
+        color: transparent; /* Hide the text on hover */
+      }
 }
 
 .noscrollbar::-webkit-scrollbar {
