--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -67,8 +67,25 @@
 }
 
 ::selection {
-    background: #E94336;
-    color: var(--foreground);
+	background: #e94336;
+	color: var(--foreground);
+}
+
+.rdp-vhidden {
+	@apply hidden;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+	/* set background color to normal and text too */
+	background-color: red;
 }
 
 @layer base {
@@ -78,108 +95,124 @@
 	body {
 		@apply bg-background text-foreground;
 	}
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-    }
 
-    html::-webkit-scrollbar {
-        background-color: var(--destructive);
-        width: 0.5rem;
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
 
-    }
-    html::-webkit-scrollbar-thumb {
-        background-color: #7d7d7d3e;
-        border-radius: 0.5rem;
-    }
+	html::-webkit-scrollbar {
+		background-color: var(--destructive);
+		width: 0.5rem;
+	}
+	html::-webkit-scrollbar-thumb {
+		background-color: #7d7d7d3e;
+		border-radius: 0.5rem;
+	}
 
-    input[type=number] {
-        -moz-appearance: textfield;
-    }
+	input[type="number"] {
+		-moz-appearance: textfield;
+	}
 
-    .no-scrollbar::-webkit-scrollbar{
-        display: none;
-        width: 0;
-    }
-    .h-screen{
-        height: 100lvh;
-    }
-    .bg-gradient{
-        background: rgb(228,43,43);
-        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
-    }
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+		width: 0;
+	}
+	.h-screen {
+		height: 100lvh;
+	}
+	.bg-gradient {
+		background: rgb(228, 43, 43);
+		background: linear-gradient(
+			45deg,
+			rgba(228, 43, 43, 1) 0%,
+			rgba(244, 126, 82, 1) 81%
+		);
+	}
 
-    .bg-hero-gradient{
-        background: rgb(228,43,43);
-        background: linear-gradient(27deg, rgba(228,43,43,0.50) 0%, rgba(244,126,82,0.5) 81%);
-    }
+	.bg-hero-gradient {
+		background: rgb(228, 43, 43);
+		background: linear-gradient(
+			27deg,
+			rgba(228, 43, 43, 0.5) 0%,
+			rgba(244, 126, 82, 0.5) 81%
+		);
+	}
 
-    .hero-input[type="text"]:focus + .hero-label,
-    .hero-input[type="text"]:not(:placeholder-shown) + .hero-label  {
-        transform: translateY(-1.5rem); /* Adjust the value as needed */
-        font-size: 0.75rem; /* Adjust the size as needed */
-    }
-    .hero-label {
-        transition: transform 0.2s ease, font-size 0.2s ease;
-        pointer-events: none; /* So you can click through the label to focus the input */
-        transform-origin: left bottom;
-    }
+	.hero-input[type="text"]:focus + .hero-label,
+	.hero-input[type="text"]:not(:placeholder-shown) + .hero-label {
+		transform: translateY(-1.5rem); /* Adjust the value as needed */
+		font-size: 0.75rem; /* Adjust the size as needed */
+	}
+	.hero-label {
+		transition: transform 0.2s ease, font-size 0.2s ease;
+		pointer-events: none; /* So you can click through the label to focus the input */
+		transform-origin: left bottom;
+	}
 
-    .text-gradient{
-        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
+	.text-gradient {
+		background: linear-gradient(
+			45deg,
+			rgba(228, 43, 43, 1) 0%,
+			rgba(244, 126, 82, 1) 81%
+		);
+		-webkit-background-clip: text;
+		background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
 
-    .nav-item {
-        position: relative; 
-        display: inline-block;
-        @apply text-[18px] font-medium;
-        color: var(--text-foreground-color);
-        transition: color 0.3s;
-      }
+	.nav-item {
+		position: relative;
+		display: inline-block;
+		@apply text-[18px] font-medium;
+		color: var(--text-foreground-color);
+		transition: color 0.3s;
+	}
 
-      .nav-item-mobile {
-        position: relative; 
-        display: inline-block;
-        @apply text-[18px] font-medium;
-        color: var(--text-foreground-color);
-      }
-      
-      .nav-item::after {
-        content: attr(data-text); /* Use the text content of the element */
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: linear-gradient(45deg, rgba(228,43,43,1) 0%, rgba(244,126,82,1) 81%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        -webkit-text-fill-color: transparent;
-        opacity: 0; /* Hide it initially */
-        transition: opacity 0.3s; /* Smooth transition for the opacity */
-        pointer-events: none; /* Allow clicks to pass through */
-      }
-      
-      .nav-item:hover::after {
-        opacity: 1; /* Show the gradient on hover */
-      }
+	.nav-item-mobile {
+		position: relative;
+		display: inline-block;
+		@apply text-[18px] font-medium;
+		color: var(--text-foreground-color);
+	}
 
-      .nav-item:hover {
-        color: transparent; /* Hide the text on hover */
-      }
-      .mask{
-        mask-image: url('@/public/mask.svg');
-        mask-repeat: no-repeat;
-        mask-size: 40px;
-        background: #ec4e39;
-        position: absolute;
-        color: black;
-      }
+	.nav-item::after {
+		content: attr(data-text); /* Use the text content of the element */
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: linear-gradient(
+			45deg,
+			rgba(228, 43, 43, 1) 0%,
+			rgba(244, 126, 82, 1) 81%
+		);
+		-webkit-background-clip: text;
+		background-clip: text;
+		color: transparent;
+		-webkit-text-fill-color: transparent;
+		opacity: 0; /* Hide it initially */
+		transition: opacity 0.3s; /* Smooth transition for the opacity */
+		pointer-events: none; /* Allow clicks to pass through */
+	}
+
+	.nav-item:hover::after {
+		opacity: 1; /* Show the gradient on hover */
+	}
+
+	.nav-item:hover {
+		color: transparent; /* Hide the text on hover */
+	}
+	.mask {
+		mask-image: url("@/public/mask.svg");
+		mask-repeat: no-repeat;
+		mask-size: 40px;
+		background: #ec4e39;
+		position: absolute;
+		color: black;
+	}
 }
 
 .noscrollbar::-webkit-scrollbar {
