--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -131,6 +131,10 @@ select:-webkit-autofill:focus {
 		);
 	}
 
+	.fill-gradient {
+		fill: url(#fill-gradient);
+	}
+
 	.bg-hero-gradient {
 		background: rgb(228, 43, 43);
 		background: linear-gradient(
@@ -212,6 +216,45 @@ select:-webkit-autofill:focus {
 		background: #ec4e39;
 		position: absolute;
 		color: black;
+	}
+
+	.ripple-button {
+		border: none;
+		overflow: hidden;
+		position: relative;
+		cursor: pointer;
+	}
+
+	.ripple-button > .ripple {
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		background: rgba(228, 43, 43, 0.5);
+		display: block;
+		content: "";
+		border-radius: 9999px;
+		opacity: 1;
+		animation: 0.9s ease 1 forwards ripple-effect;
+	}
+
+	@keyframes ripple-effect {
+		0% {
+			transform: scale(1);
+			opacity: 1;
+		}
+		50% {
+			transform: scale(10);
+			opacity: 0.375;
+		}
+		100% {
+			transform: scale(35);
+			opacity: 0;
+		}
+	}
+
+	.ripple-button > .content {
+		position: relative;
+		z-index: 2;
 	}
 }
 
