--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -218,43 +218,38 @@ select:-webkit-autofill:focus {
 		color: black;
 	}
 
-	.ripple-button {
-		border: none;
-		overflow: hidden;
-		position: relative;
-		cursor: pointer;
+	.rippleButton.gradient {
+		@apply relative overflow-hidden rounded-xl flex-shrink-0 bg-gradient h-[50px] md:h-[60px] text-white font-medium text-[16px] md:text-[18px] flex gap-3 items-center justify-center transition-all duration-200 ease-in-out disabled:opacity-50;
 	}
 
-	.ripple-button > .ripple {
-		width: 20px;
-		height: 20px;
+	.rippleButton.nofill {
+		@apply relative overflow-hidden rounded-xl flex-shrink-0 h-[50px] md:h-[60px] text-white font-medium text-[16px] md:text-[18px] flex gap-3 items-center justify-center transition-all duration-200 ease-in-out disabled:opacity-50;
+	}
+
+	.rippleButton.outlined {
+		@apply relative overflow-hidden rounded-xl flex-shrink-0 border-[1px] border-foreground w-full h-[50px] md:h-[60px] disabled:opacity-50 text-foreground font-medium text-[16px] md:text-[18px] flex gap-3 items-center justify-center transition-all duration-200 ease-in-out;
+	}
+
+	span.ripple {
 		position: absolute;
-		background: rgba(228, 43, 43, 0.5);
-		display: block;
-		content: "";
-		border-radius: 9999px;
-		opacity: 1;
-		animation: 0.9s ease 1 forwards ripple-effect;
+		border-radius: 50%;
+		transform: scale(0);
+		animation: ripple 1000ms linear;
 	}
 
-	@keyframes ripple-effect {
+	@keyframes ripple {
 		0% {
-			transform: scale(1);
+			transform: scale(0);
 			opacity: 1;
 		}
 		50% {
-			transform: scale(10);
-			opacity: 0.375;
+			transform: scale(2);
+			opacity: 0.2;
 		}
 		100% {
-			transform: scale(35);
+			transform: scale(4);
 			opacity: 0;
 		}
-	}
-
-	.ripple-button > .content {
-		position: relative;
-		z-index: 2;
 	}
 }
 
