--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -262,6 +262,22 @@ select:-webkit-autofill:focus {
 			opacity: 0;
 		}
 	}
+
+	html.dark input:-webkit-autofill,
+	html.dark input:-webkit-autofill:hover,
+	html.dark input:-webkit-autofill:focus {
+		-webkit-text-fill-color: white;
+		-webkit-box-shadow: 0 0 0px 1000px var(--background) inset;
+		transition: background-color 5000s ease-in-out 0s;
+	}
+
+	input:-webkit-autofill,
+	input:-webkit-autofill:hover,
+	input:-webkit-autofill:focus {
+		-webkit-text-fill-color: black;
+		-webkit-box-shadow: 0 0 0px 1000px var(--background) inset;
+		transition: background-color 5000s ease-in-out 0s;
+	}
 }
 
 .noscrollbar::-webkit-scrollbar {
