--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -278,6 +278,10 @@ select:-webkit-autofill:focus {
 		-webkit-box-shadow: 0 0 0px 1000px var(--background) inset;
 		transition: background-color 5000s ease-in-out 0s;
 	}
+
+	.lucide.lucide-circle {
+		@apply text-blue-500;
+	}
 }
 
 .noscrollbar::-webkit-scrollbar {
